fix about model overflow and hero z index

--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -141,6 +141,7 @@
   margin-left: 184px;
   margin-top: 61px;
   position: relative;
+  z-index: 1;
   @include for-desktop-up {
     margin-top: 108px;
     margin-left: 229px;
@@ -380,6 +381,7 @@
   color: var(--text-secondary-color);
   display: flex;
   text-align: center;
+
   @include for-phone-only {
     display: none;
   }
