--- a/src/sass/sections/_modal-about.scss
+++ b/src/sass/sections/_modal-about.scss
@@ -1,35 +1,33 @@
 .about-backdrop {
-    padding: 5%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 200;
-  
-    visibility: visible;
-    opacity: 1;
-    overflow: auto;
-  
-    background-color: rgba(0, 0, 0, 0.5);
-    transition: opacity 350ms,
-      visibility var(--transition-duration-function);
-  
-    &.about-is-hidden {
-      opacity: 0;
-      pointer-events: none;
-      visibility: hidden;
-    }
+  padding: 5%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 200;
+
+  visibility: visible;
+  opacity: 1;
+  overflow: auto;
+
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity 350ms, visibility var(--transition-duration-function);
+
+  &.about-is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
   }
+}
 
-  .modal-about {
-
+.modal-about {
   margin: 0 auto;
   padding: 40px;
   width: 100%;
   max-width: 450px;
-  overflow: auto;
-  transform:  scale(1);
+  // overflow: auto;
+  transform: scale(1);
   transition: transform var(--transition-duration-function);
   border-radius: 10px;
   text-align: left;
@@ -49,11 +47,11 @@
     height: 760px;
   }
 
-    .about-backdrop.about-is-hidden &{
+  .about-backdrop.about-is-hidden & {
     opacity: 0;
-    transform: translate( 0%, -50%) scale(0.9);
+    transform: translate(0%, -50%) scale(0.9);
   }
-  
+
   &__button-close {
     position: absolute;
     top: 10px;
@@ -63,81 +61,76 @@
     background: var(--accent-color);
     cursor: pointer;
     border-radius: 50%;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
   }
+}
 
+.about__modal-icon {
+  transition-property: fill;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
+}
+
+// photo card
+
+.ice-card {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.ice-card__list {
+  @include for-tablet-up {
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+
+.ice-card__item {
+  @include for-tablet-up {
+    flex-basis: calc((100% - 30px) / 2);
   }
 
-  .about__modal-icon {
-    transition-property: fill;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 250ms;
-    
+  & img {
+    display: inline-block;
+  }
+}
+
+.ice-card__pic {
+  width: 100%;
+  margin-bottom: 8px;
+  margin-left: 0;
+
+  @include for-tablet-up {
+    max-width: 240px;
   }
 
-  // photo card
+  @include for-desktop-up {
+    max-width: 240px;
+  }
+}
 
-  .ice-card {
-    margin-left: auto;
-    margin-right: auto;
+.ice-card__text {
+  font-family: var(--primary-font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: calc(19 / 12);
+  color: var(--text-primary-color);
+  margin-bottom: 24px;
+
+  @include for-tablet-up {
+    line-height: calc(25 / 14);
+    margin-bottom: 19px;
   }
 
-  .ice-card__list {
-
-    @include for-tablet-up {
-      text-align: center;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 30px;
-    }
+  @include for-desktop-up {
+    padding: 0 30px;
+    line-height: calc(28 / 16);
+    letter-spacing: 0.04em;
   }
-
-  .ice-card__item {
-    
-    @include for-tablet-up {
-      flex-basis: calc((100% - 30px)/2);
-    }
-
-    & img {
-      display: inline-block;
-    }
-  }
-
-  .ice-card__pic {
-    width: 100%;
-    margin-bottom: 8px;
-    margin-left: 0;
-
-    @include for-tablet-up {
-      max-width: 240px;
-    }
-  
-    @include for-desktop-up {
-      max-width: 240px;
-    }
-  }
-
-  .ice-card__text {
-    font-family: var(--primary-font);
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: calc(19 / 12);
-    color: var(--text-primary-color);
-    margin-bottom: 24px;
-  
-    @include for-tablet-up {
-      line-height: calc(25 / 14);
-      margin-bottom: 19px;
-    }
-  
-    @include for-desktop-up {
-      padding: 0 30px;
-      line-height: calc(28 / 16);
-      letter-spacing: 0.04em;
-    }
-  }
-  
+}
